# ezp2019

./: .gitignore  99-ezp2019.rules  CMakeLists.txt  LICENSE  README.md  build.sh  ezp2019.c  ezp2019.h  ezp2019.pc.in  ezp2019Config.cmake.in  ezp2019_chips.h  ezp2019_gen_header.py  main.c
